--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,7 +9,7 @@ env:
   # CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
 
 concurrency:
-  group: ${{ github.head_ref || github.ref }}
+  group: playwright-${{ github.head_ref || github.ref }}
   cancel-in-progress: true
 
 jobs:
