--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@playwright/test": "^1.49.0",
     "@types/node": "^22.9.3",
     "cypress": "^13.16.0",
+    "cypress-map": "^1.41.0",
     "prettier": "^3.0.3"
   }
 }
