--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "license": "MIT",
   "dependencies": {
     "json-server": "0.17.4",
-    "json-server-reset": "1.6.3"
+    "json-server-reset": "1.6.3",
+    "ramda": "^0.30.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
