--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "json-server": "0.17.4",
-    "json-server-reset": "1.6.3",
-    "ramda": "^0.30.1"
+    "json-server-reset": "1.6.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
