--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^22.9.3",
     "cypress": "^13.16.0",
     "cypress-map": "^1.41.0",
+    "cypress-real-events": "^1.13.0",
     "prettier": "^3.0.3"
   }
 }
