--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -44,9 +44,9 @@ jobs:
       - name: Run Playwright tests
         run: npx playwright test
 
-      # - uses: actions/upload-artifact@v4
-      #   if: ${{ !cancelled() }}
-      #   with:
-      #     name: playwright-report
-      #     path: playwright-report/
-      #     retention-days: 3
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 3
