--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "cy:run-ct": "cypress run --component --browser chrome",
     "cy:run-ct-fast": "npm run cy:run-ct --config video=false screenshot=false",
     "pw:open": "npx playwright test --ui",
+    "pw:open-debug": "PWDEBUG=1 npx playwright test --ui",
     "pw:run": "npx playwright test",
-    "pw:run-trace": "npx playwright test --trace on && npx playwright show-report"
+    "pw:run-trace": "npx playwright test --trace on && npx playwright show-report",
+    "pw:open-trace": "npx playwright show-trace"
   },
   "keywords": [],
   "license": "MIT",
