--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ramda": "0.30.1"
   },
   "devDependencies": {
+    "@bahmutov/cy-api": "^2.2.6",
     "@playwright/test": "1.49.0",
     "@types/node": "22.10.1",
     "cy-spok": "1.6.2",
